--- a/Frontend/src/pages/homepage.css
+++ b/Frontend/src/pages/homepage.css
@@ -12,3 +12,9 @@
 .block {
   animation: appear 0.5s ease-in-out;
 }
+
+.feature {
+  animation: appear 0.5s ease-in-out;
+  animation-timeline: view();
+  animation-range: entry 0;
+}
